manifests/projet-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: projet
spec: {}
status: {}
