manifests/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: projet
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: mariadb
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: wordpress
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mariadb-user-password
              key: password
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mariadb-root-password
              key: password
        - name: MYSQL_USER
          value: wordpress
        image: gitlab.jerome.lan:5005/jerome/lamp/mariadb
        imagePullPolicy: ""
        name: mariadb
        ports:
        - containerPort: 3306
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: mariadb-claim0
        persistentVolumeClaim:
          claimName: mariadb-claim0
      nodeSelector:
        volume: mysql
status: {}
