manifests/phpmyadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: projet
  creationTimestamp: null
  labels:
    app: phpmyadmin
  name: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: phpmyadmin
    spec:
      containers:
      - image: phpmyadmin/phpmyadmin
        name: phpmyadmin
        resources: {}
status: {}
