manifests/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: projet
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f ../docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: apache
  name: apache
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: apache
status:
  loadBalancer: {}
