manifests/phpmyadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: projet
  creationTimestamp: null
  labels:
    app: phpmyadmin
  name: phpmyadmin
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: phpmyadmin
status:
  loadBalancer: {}
