manifests/ssh-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: projet
  creationTimestamp: null
  labels:
    app: ssh
  name: ssh
spec:
  externalIPs:
   - 172.19.30.159
   - 172.19.30.156
   - 172.19.30.155
  ports:
  - name: "ssh"
    port: 222
    targetPort: 22
  selector:
    io.kompose.service: apache
status:
  loadBalancer: {}
